@@ -1,3 +1,8 @@
+2009-09-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+        * build-aux/gendocs.sh: Fix copyright header to match GPLv3
+        recommendation.
+
 2009-09-04  Karl Berry  <karl@gnu.org>
 
 	* install-info/install-info.c (munge_old_style_debian_options):
